# Haskell-Basics

./: README.md
Mock/: Esusu.html  ada-wallet.hs  blockchain.hs  dex.hs  mini-compiler.hs
Mock/LibraryManager/: myproject.cabal
Mock/LibraryManager/app/: Main.hs
Mock/LibraryManager/app/data/: Book.hs  Library.hs  Member.hs
Tasks/: filterfunc.hs  lambda.hs  let.hs
Tasks/HC1/HC1T1/: doubleThenIncrement.hs
Tasks/HC1/HC1T3/: greaterThan18.hs
Tasks/HC1/HC1T4/: extractPlayers.hs
Tasks/HC1/HC1T5/: infinite.hs
Tasks/HC1/HC1T6/: addNumbers.hs
Tasks/HC1/HC1T8/: applytwice.hs
Tasks/HC1T1/: double.hs  increment.hs
Tasks/HC1T2/: circleArea.hs
Tasks/HC1T7/: fToC.hs
Tasks/HC2/HC2T2/: add.hs
Tasks/HC2/HC2T3/: immutablity.hs
Tasks/HC2/HC2T4/: infix.hs
Tasks/HC2/HC2T5/: circleArea.hs  maxOfThree.hs
Tasks/HC2/HC2T6/: smallNumber.hs
Tasks/HC2T1/: checkType.hs
Tasks/HC2T2/: concatStrings.hs  even.hs
Tasks/HC2T4/: prefix.hs
Tasks/HC2T6/: bigNumber.hs
Tasks/HC2T7/: trueandtrue.hs
Tasks/HC3/HC3T1/: checknumber.hs
Tasks/HC3/HC3T10/: isPalindrome.hs
Tasks/HC3/HC3T2/: grade.hs  tempCodeRunnerFile.hs
Tasks/HC3/HC3T3/: rgb.hs
Tasks/HC3/HC3T4/: areaOfATriangle.hs
Tasks/HC3/HC3T5/: triangleType.hs
Tasks/HC3/HC3T6/: isLeapYear.hs
Tasks/HC3/HC3T7/: season .hs
Tasks/HC3/HC3T8/: bmiCategory.hs
Tasks/HC3/HC3T9/: maxOfThree.hs
Tasks/HC4/HC4T1/: weatherReport.hs
Tasks/HC4/HC4T2/: dayType.hs
Tasks/HC4/HC4T3/: gradeComment.hs
Tasks/HC4/HC4T4/: specialBirthday.hs
Tasks/HC5/HC5T2/: filterOdds.hs
Tasks/WIL/: mapfunc.hs  patternandgaurd.hs
(+34 files in other folders)
