cabal-version:   3.12
name:            myproject
version:         0.1.0.0
license:         NONE
author:          Israel Ahunanya
maintainer:      126046607+ahunanyaIsrael@users.noreply.github.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable myproject
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
